[logs][1.0] Update admin and user log
